# shutter-sensor

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
schematic/: shutter_sensor.kicad_prl  shutter_sensor.kicad_pro  shutter_sensor.kicad_sch
src/: main.rs
