[package]
authors = ["Scott Dalgliesh <scott.t.dalgliesh@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "shutter-sensor"
version = "0.1.0"

[dependencies]
embassy-executor = { version = "0.6.0", features = ["task-arena-size-40960"] }
embassy-net = { version = "0.4.0", features = ["dhcpv4", "dns", "medium-ethernet", "tcp", "udp"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2" }
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.4.0", features = ["esp32c3", "integrated-timers"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.10.1", features = [
    "async",
    "embassy-net",
    "esp32c3",
    "utils",
    "wifi",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.22" }
reqwless = "0.12.1"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
dotenvy = "0.15.7"
